# lightsaber_game

./: .gitignore  Cargo.toml  README.md  app.js  index.html  styles.css
Docs/: RUST_PYTHON_PLAN.md
Tools/gesture_bridge/: README.md  mediapipe_bridge.py  requirements.txt
crates/lightsaber_app/: Cargo.toml
crates/lightsaber_app/src/: main 2.rs  main.rs
crates/lightsaber_core/: Cargo.toml
crates/lightsaber_core/src/: combat.rs  command.rs  fitness.rs  game_mode.rs  lib.rs  multiplayer.rs  simulation.rs
crates/lightsaber_runtime/: Cargo.toml
crates/lightsaber_runtime/src/: keyboard.rs  lib.rs  protocol.rs  udp_bridge.rs
